--- a/src/main/resources/templates/admin/bulletin/bulletinList.html
+++ b/src/main/resources/templates/admin/bulletin/bulletinList.html
@@ -37,7 +37,7 @@
         <div class="mb-2">총 건수 : <span th:text="${bulletinList.totalElements}"></span></div>
 
         <table class="table table-hover">
-            <thead class="thead-light">
+            <thead>
             <tr>
                 <th>번호</th>
                 <th>게시판제목</th>
