--- a/src/main/resources/templates/admin/commonCodeList.html
+++ b/src/main/resources/templates/admin/commonCodeList.html
@@ -7,13 +7,13 @@
     <title>공통코드관리</title>
 </head>
 <body th:with="currentPage = 'COMMON_CODE'">
-<main layout:fragment="content" role="main" class="col-md-9 ml-sm-auto col-lg-10 px-md-4">
+<main layout:fragment="content" role="main" class="col-md-9 ml-sm-auto col-lg-10 px-md-4" id="commonCode">
     <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
         <h1 class="h2">공통코드관리</h1>
         <div class="mb-2 mb-md-0">
-            <button type="button" class="btn btn-sm btn-outline-secondary appendRow">추가</button>
-            <button type="button" class="btn btn-sm btn-outline-dark deleteRow">삭제</button>
-            <button type="button" class="btn btn-sm btn-outline-primary saveGrid">저장</button>
+            <button type="button" class="btn btn-sm btn-outline-secondary" @click="appendRow">추가</button>
+            <button type="button" class="btn btn-sm btn-outline-dark" @click="deleteRow">삭제</button>
+            <button type="button" class="btn btn-sm btn-outline-primary" @click="save">저장</button>
         </div>
     </div>
 
@@ -22,14 +22,25 @@
             <tbody>
             <tr>
                 <th>Code Type</th>
-                <td><input type="text" name="codeType" class="form-control form-control-sm"></td>
+                <td><input type="text" v-model="params.codeType" class="form-control form-control-sm"></td>
                 <th>Code</th>
-                <td><input type="text" name="code" class="form-control form-control-sm"></td>
+                <td><input type="text" v-model="params.code" class="form-control form-control-sm"></td>
                 <th>Code Name</th>
-                <td><input type="text" name="codeName" class="form-control form-control-sm"></td>
+                <td><input type="text" v-model="params.codeName" class="form-control form-control-sm"></td>
+                <th>Use Flag</th>
+                <td>
+                    <select class="form-control form-control-sm" v-model="params.useFlag">
+                        <option value="Y">Yes</option>
+                        <option value="N">No</option>
+                    </select>
+                </td>
             </tr>
             </tbody>
         </table>
+        <div class="mb-3 text-center">
+            <button type="button" class="btn btn-sm btn-primary search" @click="search">
+                <i class="fa fa-search"></i> 검색</button>
+        </div>
     </div>
 
     <div class="container-fluid">
@@ -52,200 +63,237 @@
 <th:block layout:fragment="script">
     <script th:inline="javascript" type="text/javascript">
         /*<![CDATA[*/
-        var dataHeader = {};
-        dataHeader[header] = token;
-
-        var grid = new tui.Grid({
-            el: document.getElementById('grid'),
-            data: {
-                withCredentials: true,
-                contentType: 'application/json',
-                headers: dataHeader,
-                api: {
-                    readData: {url: '/admin/commonCode/api', method: 'GET'},
-                    modifyData: {url: '/admin/commonCode/api', method: 'POST'},
+        var commonCode = {
+            data: function () {
+                return {
+                    params: {
+                        codeType: null,
+                        code: null,
+                        codeName: null,
+                        useFlag: 'Y'
+                    },
+                    grid: null
                 }
             },
-            rowHeaders: ['checkbox'],
-            scrollX: false,
-            scrollY: false,
-            pageOptions: {
-                perPage: 5
+            methods: {
+                search: function () {
+                    console.log(this.params)
+                    this.grid.readData(1, this.params);
+                },
+                appendRow: function () {
+                    this.grid.finishEditing();
+                    this.grid.appendRow();
+                },
+                deleteRow: function () {
+                    var that = this;
+                    var rows = this.grid.getCheckedRowKeys();
+
+                    if (rows.length <= 0) {
+                        bootbox.alert("대상을 선택하세요");
+                    } else {
+                        bootbox.confirm("삭제하시겠습니까?", function (result) {
+                            if (result) {
+                                var isRemove = that.grid.removeCheckedRows(false);
+                                if (isRemove) {
+                                    that.grid.request("modifyData", {showConfirm: false});
+                                }
+                            }
+                        });
+                    }
+                },
+                save: function () {
+                    var that = this;
+                    // 저장 전 Editing을 끝낸다.
+                    this.grid.finishEditing();
+
+                    if (this.grid.isModified()) {
+                        var isValid = this.grid.validate();
+                        console.log(isValid);
+
+                        if (isValid.length) {
+                            var message = isValid[0].errors[0].columnName;
+                            bootbox.alert(message + "은(는) 필수입니다.");
+                        } else {
+                            bootbox.confirm("저장 하시겠습니까?", function (result) {
+                                if (result) {
+                                    that.grid.request("modifyData", {showConfirm: false});
+                                }
+                            });
+                        }
+                    } else {
+                        bootbox.alert("변경 된 내용이 없습니다.");
+                    }
+                }
             },
-            columns: [
-                {
-                    header: 'ID',
-                    name: 'id',
-                    align: 'center',
-                    width: 50,
-                    _attribute: {
-                        disabled: true
-                    }
-                },
-                {
-                    header: 'Code Type',
-                    name: 'codeType',
-                    align: 'center',
-                    editor: "text",
-                    validation: {
-                        required: true
-                    }
-                },
-                {
-                    header: 'Code',
-                    name: 'code',
-                    align: 'center',
-                    editor: "text",
-                    validation: {
-                        required: true
-                    }
-                },
-                {
-                    header: 'Code Name',
-                    name: 'codeName',
-                    align: 'center',
-                    editor: "text",
-                    validation: {
-                        required: true
-                    }
-                },
-                {
-                    header: 'Code Desc',
-                    name: 'codeDesc',
-                    align: 'center',
-                    editor: "text",
-                },
-                {
-                    header: 'Parent Code',
-                    name: 'parentCode',
-                    align: 'center',
-                    editor: "text",
-                },
-                {
-                    header: 'Use Flag',
-                    name: 'useFlag',
-                    align: 'center',
-                    formatter: 'listItemText',
-                    editor: {
-                        type: 'select',
-                        options: {
-                            listItems: [
-                                {text: 'Yes', value: 'Y'},
-                                {text: 'No', value: 'N'},
-                            ]
+            created: function () {
+
+            },
+            mounted: function () {
+                var that = this;
+                var dataHeader = {};
+                dataHeader[header] = token;
+
+                this.grid = new tui.Grid({
+                    el: document.getElementById('grid'),
+                    data: {
+                        withCredentials: true,
+                        contentType: 'application/json',
+                        headers: dataHeader,
+                        api: {
+                            readData: {url: '/admin/commonCode/api', method: 'GET', initParams: that.params},
+                            modifyData: {url: '/admin/commonCode/api', method: 'POST'},
                         }
-                    }
-                },
-                {
-                    header: 'Sort Order No',
-                    name: 'sortNo',
-                    align: 'center',
-                    editor: "text",
-                },
-                {
-                    header: 'Attribute1',
-                    name: 'attribute1',
-                    align: 'center',
-                    editor: "text",
-                },
-                {
-                    header: 'Attribute2',
-                    name: 'attribute2',
-                    align: 'center',
-                    editor: "text",
-                },
-                {
-                    header: 'Attribute3',
-                    name: 'attribute3',
-                    align: 'center',
-                    editor: "text",
-                },
-                {
-                    header: 'Attribute4',
-                    name: 'attribute4',
-                    align: 'center',
-                    editor: "text",
-                },
-                {
-                    header: 'Attribute5',
-                    name: 'attribute5',
-                    align: 'center',
-                    editor: "text",
-                },
+                    },
+                    rowHeaders: ['checkbox'],
+                    scrollX: false,
+                    scrollY: false,
+                    pageOptions: {
+                        perPage: 10
+                    },
+                    columns: [
+                        {
+                            header: 'ID',
+                            name: 'id',
+                            align: 'center',
+                            width: 50,
+                            _attribute: {
+                                disabled: true
+                            }
+                        },
+                        {
+                            header: 'Code Type',
+                            name: 'codeType',
+                            align: 'center',
+                            editor: "text",
+                            validation: {
+                                required: true
+                            }
+                        },
+                        {
+                            header: 'Code',
+                            name: 'code',
+                            align: 'center',
+                            editor: "text",
+                            validation: {
+                                required: true
+                            }
+                        },
+                        {
+                            header: 'Code Name',
+                            name: 'codeName',
+                            align: 'center',
+                            editor: "text",
+                            validation: {
+                                required: true
+                            }
+                        },
+                        {
+                            header: 'Code Desc',
+                            name: 'codeDesc',
+                            align: 'center',
+                            editor: "text",
+                        },
+                        {
+                            header: 'Parent Code',
+                            name: 'parentCode',
+                            align: 'center',
+                            editor: "text",
+                        },
+                        {
+                            header: 'Use Flag',
+                            name: 'useFlag',
+                            align: 'center',
+                            formatter: 'listItemText',
+                            editor: {
+                                type: 'select',
+                                options: {
+                                    listItems: [
+                                        {text: 'Yes', value: 'Y'},
+                                        {text: 'No', value: 'N'},
+                                    ]
+                                }
+                            }
+                        },
+                        {
+                            header: 'Sort Order No',
+                            name: 'sortNo',
+                            align: 'center',
+                            editor: "text",
+                        },
+                        {
+                            header: 'Attribute1',
+                            name: 'attribute1',
+                            align: 'center',
+                            editor: "text",
+                        },
+                        {
+                            header: 'Attribute2',
+                            name: 'attribute2',
+                            align: 'center',
+                            editor: "text",
+                        },
+                        {
+                            header: 'Attribute3',
+                            name: 'attribute3',
+                            align: 'center',
+                            editor: "text",
+                        },
+                        {
+                            header: 'Attribute4',
+                            name: 'attribute4',
+                            align: 'center',
+                            editor: "text",
+                        },
+                        {
+                            header: 'Attribute5',
+                            name: 'attribute5',
+                            align: 'center',
+                            editor: "text",
+                        },
 
-            ]
-        });
-
-        $(".appendRow").on("click", function () {
-            grid.finishEditing();
-            grid.appendRow();
-        });
-
-        $(".deleteRow").on("click", function () {
-            var rows = grid.getCheckedRowKeys();
-
-            if (rows.length <= 0) {
-                bootbox.alert("대상을 선택하세요");
-            } else {
-                bootbox.confirm("삭제하시겠습니까?", function (result) {
-                    if (result) {
-                        var isRemove = grid.removeCheckedRows(false);
-                        if (isRemove) {
-                            grid.request("modifyData", {showConfirm: false});
-                        }
-                    }
+                    ]
                 });
+
+                // Grid Event
+                /*this.grid.on('beforeRequest', function(ev) {
+                    // 요청을 보내기 전
+                }).on('successResponse', function(ev) {
+                    // 결과가 true인 경우
+                }).on('failResponse', function(ev) {
+                    // 결과가 false인 경우
+                }).on('errorResponse', function(ev) {
+                    // 오류가 발생한 경우
+                });*/
+
+                /*this.grid.on('beforeRequest', function(ev) {
+                    // 요청을 보내기 전
+                    // bootbox.alert("beforeRequest");
+                });
+
+                this.grid.on("response", function (ev) {
+                    // 성공/실패와 관계 없이 응답을 받았을 경우
+                });
+
+                this.grid.on('successResponse', function(ev) {
+                    // 결과가 true인 경우
+                    // console.log(ev)
+                    // bootbox.alert("저장 되었습니다.");
+                });
+
+                this.grid.on('failResponse', function(ev) {
+                    // 결과가 false인 경우
+                    // bootbox.alert("저장에 실패 했습니다.");
+                });
+
+                this.grid.on('errorResponse', function(ev) {
+                    // 오류가 발생한 경우
+                    // console.log(ev)
+                    // bootbox.alert("에러가 발생했습니다.");
+                });*/
             }
-        });
+        }
 
-        $(".saveGrid").on("click", function () {
-            // 저장 전 Editing을 끝낸다.
-            grid.finishEditing();
-
-            if (grid.isModified()) {
-                var isValid = grid.validate();
-                console.log(isValid);
-
-                if (isValid.length) {
-                    var message = isValid[0].errors[0].columnName;
-                    bootbox.alert(message + "은(는) 필수입니다.");
-                } else {
-                    bootbox.confirm("저장 하시겠습니까?", function (result) {
-                        if (result) {
-                            grid.request("modifyData", {showConfirm: false});
-                        }
-                    });
-                }
-            } else {
-                bootbox.alert("변경 된 내용이 없습니다.");
-            }
-        });
-
-        grid.on('beforeRequest', function(ev) {
-            // 요청을 보내기 전
-            // bootbox.alert("beforeRequest");
-        });
-
-        /*grid.on("response", function (ev) {
-            // 성공/실패와 관계 없이 응답을 받았을 경우
-        });*/
-
-        grid.on('successResponse', function(ev) {
-            // 결과가 true인 경우
-            // console.log(ev)
-            // bootbox.alert("저장 되었습니다.");
-        });
-
-        grid.on('failResponse', function(ev) {
-            // 결과가 false인 경우
-            // bootbox.alert("저장에 실패 했습니다.");
-        });
-
-        grid.on('errorResponse', function(ev) {
-            // 오류가 발생한 경우
-            // console.log(ev)
-            // bootbox.alert("에러가 발생했습니다.");
-        });
+        Vue.createApp(commonCode).mount('#commonCode');
         /*]]>*/
     </script>
 </th:block>
